Added additional styling to menu pane

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 	<body>
 		<div class="background" id="canvasContainer"></div>
-		<div id="floatMenu" class="resizable" draggable="true">
+		<div id="floatMenu">
 			<h2>Bubbles</h2>
 			<h5>with p5.js</h5>
 
 			<p>Bubbles: <span id="numBubbles"></span></p>
 
-			<button id="followMouse">Follow mouse</button>
-			<button id="makeBubbles">Make Bubbles</button>
-			<button id="clearBubbles">Clear Bubbles</button>
+			<p><button id="followMouse">Follow mouse</button></p>
+			<p><button id="makeBubbles">Make Bubbles</button></p>
+			<p><button id="clearBubbles">Clear Bubbles</button></p>
 
 			<p id="copyright">&copy; 2016 Oliver Newman</p>
 		</div>
