Click creates only one bubble now

--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
 
 	<body>
 		<div class="background" id="canvasContainer"></div>
-		<div id="floatMenu">
+		<div id="floatMenu" class="noselect">
 			<h2>Bubbles</h2>
 			<h5>with p5.js</h5>
 
 			<p>Bubbles: <span id="numBubbles"></span></p>
 
-			<p><button id="followMouse">Follow mouse</button></p>
+			<p><button id="followMouse">Follow Mouse</button></p>
 			<p><button id="makeBubbles">Make Bubbles</button></p>
 			<p><button id="clearBubbles">Clear Bubbles</button></p>
 
-			<p id="copyright">&copy; 2016 Oliver Newman</p>
+			<p id="gh">
+			<a href="https://github.com/oliver-newman/bubbles" target="_blank">
+				GitHub Repo
+			</a>
+			</p>
+
+			<p id="foot">
+			&copy; 2016 <a href="https://oliver-newman.github.io" target="_blank">Oliver Newman</a>
+			</p>
 		</div>
 	</body>
 </html>
